tsung (1.5.1-1) unstable; urgency=low
  * New upstream release. (Closes: #691354, #695284, #728124, #719234)
  * debian/patches:
    - Removed 02_fix_tsung_recorder_crash_dump.diff, included upstream.
    - Removed 01_spelling_corrections.diff.
  * Moved from python-support to dh_python2.
  * Bump Standards-Version to 3.9.5. No changes required.

--- a/control
+++ b/control
@@ -8,10 +8,10 @@ Build-Depends: autotools-dev,
  erlang-dev (>= 1:13.b.1-dfsg-3),
  erlang-nox,
  erlang-src,
- python,
- python-support
+ python (>= 2.6.6-3~),
+ dh-python
 Homepage: http://tsung.erlang-projects.org/
-Standards-Version: 3.9.2
+Standards-Version: 3.9.5
 
 Package: tsung
 Architecture: any
