tsung (1.5.1-1) unstable; urgency=low
  * New upstream release. (Closes: #691354, #695284, #728124, #719234)
  * Acknowledge NMU, thanks Julián Moreno Patiño.
  * debian/patches:
    - Removed 02_fix_tsung_recorder_crash_dump.diff, included upstream.
    - Removed 01_spelling_corrections.diff, included upstream.
  * debian/rules:
    - Included build of html documentation.
  * debian/control:
    - Added Build-Depends on python-sphinx.
    - Added dependencies to JavaScript libraries used by html documentation:
      - libjs-jquery
      - libjs-underscore
  * debian/tsung.docs:
    - Added new html documentation.
  * debian/tsung.doc-base:
    - Updated to point to new index.html file.
  * debian/copyright:
    - Added mention to src/templates/dygraph-combined.js.
    - Added mention to src/tsung_percentile.pl.in.
  * debian/tsung.links:
    - Added links to JavaScript files used by html documentation.
  * Removed debian/docs file, duplicate of debian/tsung.docs.
  * Moved from python-support to dh_python2.
  * Bump Standards-Version to 3.9.5. No changes required.

--- a/control
+++ b/control
@@ -9,7 +9,8 @@ Build-Depends: autotools-dev,
  erlang-nox,
  erlang-src,
  python (>= 2.6.6-3~),
- dh-python
+ dh-python,
+ python-sphinx
 Homepage: http://tsung.erlang-projects.org/
 Standards-Version: 3.9.5
 
@@ -21,7 +22,9 @@ Depends: gnuplot,
  ${erlang-abi:Depends},
  ${erlang:Depends},
  ${misc:Depends},
- ${python:Depends}
+ ${python:Depends},
+ libjs-jquery,
+ libjs-underscore
 Recommends: openssh-client
 Description: distributed multi-protocol load testing tool
  Tsung is a distributed load testing tool. It can be used to stress
