tsung (1.6.0-1) unstable; urgency=medium
* New upstream release.
* debian/copyright:
  - Moved all license text to bottom of the copyright file, as defined in the
    "recurrent license" section of the Debian copyright format v1.0.
  - Updated path to dygraph-combined.js.
  - Removed mention to rrdtool.hrl.
  - Mentioned all files that were added in this new release.
* debian/tsung.links:
  - Added link to package provided jquery.min.js.
* debian/compat:
  - Bumped compat version from 7 to 9.
* debian/control:
  - Bumped Standards-Version to 3.9.8.
  - Updated debhelper dependency version to follow new compat version.
* debian/rules:
  - Updated override_dh_auto_install to remove all installed and empty
    directories.

--- a/control
+++ b/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Ignace Mouzannar <mouzannar@gmail.com>
 Build-Depends: autotools-dev,
- debhelper (>= 7.0.50~),
+ debhelper (>= 9),
  docbook-utils,
  erlang-dev (>= 1:13.b.1-dfsg-3),
  erlang-nox,
@@ -12,7 +12,7 @@ Build-Depends: autotools-dev,
  dh-python,
  python-sphinx
 Homepage: http://tsung.erlang-projects.org/
-Standards-Version: 3.9.5
+Standards-Version: 3.9.8
 
 Package: tsung
 Architecture: any
