--- a/control
+++ b/control
@@ -10,16 +10,15 @@ Build-Depends: autotools-dev,
  erlang-src,
  python (>= 2.6.6-3~),
  dh-python,
- python-sphinx
+ python3-sphinx
 Homepage: http://tsung.erlang-projects.org/
-Standards-Version: 3.9.8
+Standards-Version: 4.1.1
 
 Package: tsung
 Architecture: any
 Depends: gnuplot,
  libtemplate-perl,
  python-matplotlib,
- ${erlang-abi:Depends},
  ${erlang:Depends},
  ${misc:Depends},
  ${python:Depends},
